fix: add flex direction and overflow-x for scrollcontainer at 1080px

--- a/web/css/about.css
+++ b/web/css/about.css
@@ -311,6 +311,11 @@ li {
         width: 100%;
         padding-right: 0;
     }
+
+    .scrollcontainer {
+        flex-direction: column;
+        overflow-x: visible;
+    }
 }
 
 @media screen and (max-width:900px) {
